link to article 3 and article 4

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -297,7 +297,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="articlename">
               <h4>Challenges in 3D Editing</h4>
             </div>
-            <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+            <div class="desc"> It was always been difficult to interact with 3D models on a computer screen as it is just a 2D space and the sense of depth is provided using the perspective display method. One can easily understand the movement of an object in the 2 directions...</div>
             <div class="more"><a href="thoughts.htm#EditingChallenge"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.php">
@@ -305,7 +305,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="articlename">
               <h4>3D Programming APIs</h4>
             </div>
-            <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+            <div class="desc">There are only a few options when it comes to programming in 3D. While Microsoft is promoting DirectX and Apple promoting Metal, there is a huge fan base for Open GL too which is an open specification driven by the Khronos group. Of course, the popularity...</div>
             <div class="more"><a href="thoughts.htm#3DAPIs"><img src="images/arow.png"></a></div>
           </div>
         </div>
