--- a/index_designer.htm
+++ b/index_designer.htm
@@ -305,7 +305,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="articlename">
               <h4>3D Programming APIs</h4>
             </div>
-            <div class="desc">There are only a few options when it comes to programming in 3D. While Microsoft is promoting DirectX and Apple promoting Metal, there is a huge fan base for Open GL too which is an open specification driven by the Khronos group. Of course, the popularity...</div>
+            <div class="desc">There are only a few options when it comes to programming in 3D. While Microsoft is promoting DirectX and Apple promoting Metal, there is a huge fan base for Open GL too which is an open specification driven by the Khronos group. Of course...</div>
             <div class="more"><a href="thoughts.htm#3DAPIs"><img src="images/arow.png"></a></div>
           </div>
         </div>
