--- a/index_designer.htm
+++ b/index_designer.htm
@@ -310,7 +310,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
           </div>
         </div>
         <div class="row morearticle">
-          <div class="col-sm-12 morearticles wow fadeInUp">MORE ARTICLES</div>
+          <div class="col-sm-12 morearticles wow fadeInUp"><a href="thoughts.htm#Multi-GPU">MORE ARTICLES</a></div>
         </div>
       </div>
     </section>
