linking to profile section of the same page

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -163,7 +163,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menulink"> 3D</div>
             <div class="menusep"></div>
             </a></li>
-          <li><a  href="about.php">
+          <li><a  href="#Profile">
             <div class="menulink">Profile</div>
             </a></li>
           <li id="logomenu"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
@@ -250,7 +250,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     <section id="profile" >
       <div class="container" >
         <div class="row">
-          <div class="col-sm-12 heading wow fadeInDown " align="center"><img src="images/profile1.png" width="99" height="99"> <span class="headspace">Profile</span></div>
+          <div class="col-sm-12 heading wow fadeInDown " align="center"><img src="images/profile1.png" width="99" height="99"> <span class="headspace"> <a name="Profile"></a> Profile</span></div>
         </div>
         <div class="row">
           <div class="desc wow fadeInLeft">
