changed location of #profile`

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -247,10 +247,11 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
 
     <!-- end home --> 
     <!---start profile--->
+    <a name="Profile"></a>
     <section id="profile" >
       <div class="container" >
         <div class="row">
-          <div class="col-sm-12 heading wow fadeInDown " align="center"><img src="images/profile1.png" width="99" height="99"> <span class="headspace"> <a name="Profile"></a> Profile</span></div>
+          <div class="col-sm-12 heading wow fadeInDown " align="center"><img src="images/profile1.png" width="99" height="99"> <span class="headspace">Profile</span></div>
         </div>
         <div class="row">
           <div class="desc wow fadeInLeft">
