added in-page links

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -167,10 +167,10 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menulink">Profile</div>
             </a></li>
           <li id="logomenu"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
-          <li><a  href="thoughts.htm">
+          <li><a  href="#Thoughts">
             <div class="menulink">Thoughts</div>
             </a></li>
-          <li><a  href="contact.php">
+          <li><a  href="#Join">
             <div class="menusep"></div>
             <div class="menulink">Contact</div>
             </a> </li>
@@ -268,6 +268,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     <!---end profile---> 
     <!-- start about -->
     <section id="thoughts" >
+    <a name="Thoughts"></a>
       <div class="container" >
         <div class="row">
           <div class="col-sm-12 heading  wow fadeInDown" align="center"><img src="images/thought.png"> <span class="headspace">Thoughts</span></div>
@@ -317,6 +318,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
       </div>
     </section>
     <section id="join" >
+    <a name="Join"></a>
       <div class="container" >
         <div class="row">
           <div class="col-sm-12 heading  wow fadeInDown" align="center"><img src="images/thought.png"> <span class="headspace">Join</span></div>
@@ -338,6 +340,6 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
         </section>
 
     <!-- start footer -->
-    <?php include("footer.php");?>
+    <?php include("footer.htm");?>
 </body>
 </html>
