link added to Home

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -159,7 +159,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
       <div class="navbar-header"><div id="logo"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" height="70px" width="70px;" ></a></div> <div class="resmenu"><a id="resp-menu" class="responsive-menu" href="#">
    Menu</a></div>
         <ul class="menu wow fadeInUp" >
-          <li><a  href="3d.php" >
+          <li><a  href="#Home" >
             <div class="menulink"> 3D</div>
             <div class="menusep"></div>
             </a></li>
@@ -194,6 +194,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
 
     <!-- start home -->
     <section id="home1" class="slide">
+        <a name="Home"></a>
       <div id="slider1_container" style="position: relative; margin: 0 auto;
         top: 0px; left: 0px; width: 1300px; height:503px; overflow: hidden;">
       
