--- a/index_designer.htm
+++ b/index_designer.htm
@@ -343,7 +343,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
 
     <!-- start footer -->
     <!-- <?php include("footer.htm");?> -->
-    <div w3-include-html="footer.html"></div>
+    <div w3-include-html="footer.htm"></div>
     <script>
     w3IncludeHTML();
     </script>
