Added product link

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -164,6 +164,10 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menulink"> 3D</div>
             <div class="menusep"></div>
             </a></li>
+          <li><a  href="#Products" >
+            <div class="menulink"> Products</div>
+            <div class="menusep"></div>
+            </a></li>
           <li><a  href="#Profile">
             <div class="menulink">Profile</div>
             </a></li>
