linked to lidarlion.htm

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -164,7 +164,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menulink"> 3D</div>
             <div class="menusep"></div>
             </a></li>
-          <li><a  href="#Products" >
+          <li><a href="lidarlion.html">
             <div class="menulink"> Products</div>
             <div class="menusep"></div>
             </a></li>
