--- a/index_designer.htm
+++ b/index_designer.htm
@@ -11,7 +11,7 @@ include_once("includes/encryption.htm");
     <meta name="keywords" content="3D, programming,1074,vectors,picture,graphics,dimensions,engineering,Architecting,companies,software,homes ,RGB pixels,photograph,360 degrees,LIDAR,devices,SWOT ,mathematics,imaging,bytes,Stereoscopic ,memorized,data, x,y,z,DICOM ,Microsoft ,programmer ," />
     <meta name="description" content="3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.
 
-We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy." />
+We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s challenging to keep performance with required accuracy." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="3D" />
     <meta name="copyright" content="3D"/>
@@ -332,13 +332,13 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
         <div class="row desc">
        <p><b> We welcome all challenge loving programmers.</b></p>
 
-<ul><li> Passion towards 3D is our first criteria.</li>
-<li>Then a sense in 3D. With a white board or piece of paper,  its hard to communicate 3D. Only indications that we can draw or talk. Right? Yea.. then you got it. J</li>
-<li> You may be good in JS or openGL ES. We agree that you are an expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge of system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programmer knowledge!</li>
+<ul><li> Passion for 3D is our first criteria.</li>
+<li>Then a sense in 3D. With a white board or piece of paper,  it is hard to communicate 3D. Only indications that we can draw or talk. Right? Yea.. then you got it. </li>
+<li> You may be good in JS or openGL ES. We agree that you are an expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge of system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programming knowledge!</li>
 <li>Be connected. We want you to learn seamlessly. Be abreast.</li>
 <li> Travel friendly…? Good.. not just flying and talking; we want you to know and respect global cultures. </li> 
 
-<p>Finally but very important: Trust…! We trust you and you trust us. Reach business/privacy. That is our commitment. If you are ready for that professional life based on trust, you are welcome to join us.</p>
+<p>Finally but very important: Trust…! We trust you and you can trust us. That is our commitment. If you are ready for that professional life based on mutual trust, you are welcome to join us.</p>
 
  
         </div>
