Setting designer version as main

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@ include_once("includes/encryption.htm");
     <meta name="keywords" content="3D, programming,1074,vectors,picture,graphics,dimensions,engineering,Architecting,companies,software,homes ,RGB pixels,photograph,360 degrees,LIDAR,devices,SWOT ,mathematics,imaging,bytes,Stereoscopic ,memorized,data, x,y,z,DICOM ,Microsoft ,programmer ," />
     <meta name="description" content="3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.
 
-We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s challenging to keep performance with required accuracy." />
+We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s challenging to retain performance with required accuracy." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="3D" />
     <meta name="copyright" content="3D"/>
@@ -31,7 +31,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     <meta property="og:url" content="http://1074vectors.com "/>
     <!-- GOOGLE PLUS -->
     <meta itemprop="name" content="3D" />
-    <meta itemprop="description" content="3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.
+    <meta itemprop="description" content="3D programming make sense! When it deals with huge data, it’s interesting too. You have reached 1074 Vectors, the home of interactive 3D graphics experts.
 
 We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy." />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
@@ -333,12 +333,12 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
        <p><b> We welcome all challenge loving programmers.</b></p>
 
 <ul><li> Passion for 3D is our first criteria.</li>
-<li>Then a sense in 3D. With a white board or piece of paper,  it is hard to communicate 3D. Only indications that we can draw or talk. Right? Yea.. then you got it. </li>
+<li>Then a sense in 3D. With a white board or piece of paper, it is hard to communicate 3D. We can only indicate by drawing. Difficult.. Right?</li>
 <li> You may be good in JS or openGL ES. We agree that you are an expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge of system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programming knowledge!</li>
-<li>Be connected. We want you to learn seamlessly. Be abreast.</li>
-<li> Travel friendly…? Good.. not just flying and talking; we want you to know and respect global cultures. </li> 
+<li>Be connected. We want you to learn seamlessly. Be abreast in technology.</li>
+<li> Travel friendly…? Good.. not just flying and speaking; we want you to know and respect global cultures. </li> 
 
-<p>Finally but very important: Trust…! We trust you and you can trust us. That is our commitment. If you are ready for that professional life based on mutual trust, you are welcome to join us.</p>
+<p>Finally the most important one: Trust…! We trust you and you can trust us. That is our commitment. If you are ready for that professional life based on mutual trust, you are welcome to join us.</p>
 
  
         </div>
