--- a/footer.htm
+++ b/footer.htm
@@ -7,7 +7,7 @@
             </div>
             <div class="row">
             <div class="col-sm-4 wow fadeInLeft">
-            <div class="conthead ">Why ?</div>
+            <div class="conthead ">Privacy</div>
             <div class="desc"><p>Privacy is very important for each one of us. Like that we honor other’s privacy too.</p>
 
 <p>Our privacy strategy is systematic and secure which is matured. All our core engineering staff knows each other for many years. The core team would not pass any information without declassification to support group, be it the algorithm team or the UX team. The declassification process is strategically our trade secret. </p>
@@ -21,7 +21,7 @@
             <div><img src="images/info.png"></div>
              <div class="info">yourBuddy@1074vectors.com</div>
               <div><img src="images/phone.png"></div>
-               <div class="info">+91 2345 678 90</div>
+               <div class="info">+91 98460 10223</div>
             </div>
             
             </div>
