corrected home link

--- a/index.htm
+++ b/index.htm
@@ -171,7 +171,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
           <li><a  href="#Profile">
             <div class="menulink">Profile</div>
             </a></li>
-          <li id="logomenu"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
+          <li id="logomenu"><a href="index.htm" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
           <li><a  href="#Thoughts">
             <div class="menulink">Thoughts</div>
             </a></li>
