added home link

--- a/lidarlion.html
+++ b/lidarlion.html
@@ -15,7 +15,8 @@
 <link rel="stylesheet" href="css/3d.css">
 <body style="margin:10px;">
   <section id="banner" >
-    <div class="banner"> <a href="index.htm"/> <img src="images/inbanner.png"  width="100%"/>  </div>
+      <a href="index.htm"/>
+    <div class="banner"> <img src="images/inbanner.png"  width="100%"/> </div>
   </section>
 
   <div class="col-sm-12 heading" align="center"><span class="headspace">LidarLion</span></div>
