--- a/lidarlion.html
+++ b/lidarlion.html
@@ -15,9 +15,11 @@
 <link rel="stylesheet" href="css/3d.css">
 <body style="margin:10px;">
   <section id="banner" >
-    <a href="index.htm">
-        <img src="logo.png" alt="Home" style="width:42px;height:42px;border:0;">
-    </a>
+      <div>
+            <a href="index.htm">
+                <img src="logo.png" alt="Home" style="width:42px;height:42px;border:0;">
+            </a>
+          </div>
     <div class="banner"> <img src="images/inbanner.png"  width="100%"/> </div>
   </section>
 
