added home link

--- a/lidarlion.html
+++ b/lidarlion.html
@@ -15,12 +15,17 @@
 <link rel="stylesheet" href="css/3d.css">
 <body style="margin:10px;">
   <section id="banner" >
-      <div>
-            <a href="index.htm">
-                <img src="logo.png" alt="Home" style="width:42px;height:42px;border:0;">
-            </a>
-          </div>
-    <div class="banner"> <img src="images/inbanner.png"  width="100%"/> </div>
+
+    <header>
+        <div class="container">
+            <a href="index.html"><img class="logo" src="images/logo.png" 
+            width="20%"></a>
+        </div>
+        <div class="container">
+            <img class="banner" src="images/inbanner.png" width="80%">
+        </div>
+    </header>
+
   </section>
 
   <div class="col-sm-12 heading" align="center"><span class="headspace">LidarLion</span></div>
