--- a/lidarlion.html
+++ b/lidarlion.html
@@ -18,8 +18,8 @@
 
          <div class="container">
             <a href="index.html"><img class="logo" src="images/logo.png" 
-            width="20%"></a>
-            <img class="banner" src="images/inbanner.png" width="80%">
+            width="200"></a>
+            <img class="banner" src="images/inbanner.png" width="800">
         </div>
 
   </section>
