added home link

--- a/lidarlion.html
+++ b/lidarlion.html
@@ -19,7 +19,7 @@
          <div class="container">
             <a href="index.html"><img class="logo" src="images/logo.png" 
             width="200"></a>
-            <img class="banner" src="images/inbanner.png" width="800">
+            <img class="logo" src="images/inbanner.png" width="800">
         </div>
 
   </section>
