--- a/lidarlion.html
+++ b/lidarlion.html
@@ -18,8 +18,10 @@
 
          <div class="container">
             <a href="index.html"><img class="logo" src="images/logo.png" 
-            width="200"></a>
-            <img class="logo" src="images/inbanner.png" width="800">
+            width="20%"></a>
+        </div>
+        <div class="container">
+            <img class="banner" src="images/inbanner.png" width="80%">
         </div>
 
   </section>
