--- a/lidarlion.html
+++ b/lidarlion.html
@@ -15,16 +15,12 @@
 <link rel="stylesheet" href="css/3d.css">
 <body style="margin:10px;">
   <section id="banner" >
-      <div>
-            <a href="index.htm">
-                <img src="logo.png" alt="Home" style="width:42px;height:42px;border:0;">
-            </a>
-          </div>
+
     <div class="banner"> <img src="images/inbanner.png"  width="100%"/> </div>
 
   </section>
 
-  <div class="col-sm-12 heading" align="center"><span class="headspace">LidarLion</span></div>
+  <div class="col-sm-12 heading" align="center">  <a href="index.htm"> <img src="image/logo.png" alt="Home" style="width:42px;height:42px;border:0;"> </a> <span class="headspace">LidarLion</span></div>
   <div align="center">
     <img class="img-responsive" src="images/lidarLionContext.jpg" width="400" alt="lidarLion Context" />
   </div>
