added home link

--- a/thoughts.htm
+++ b/thoughts.htm
@@ -59,7 +59,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
 <section id="innercontentarea" >
   <div class="container" >
     <div class="row">
-      <div class="col-sm-12 heading" align="center"><span class="headspace">Thoughts</span></div>
+      <div class="col-sm-12 heading" align="center"><a href="index.htm"> <img src="images/logo.png" alt="Home" style="width:94px;height:94px;border:0;"> </a> <span class="headspace">Thoughts</span></div>
     </div>
     <div class="row">
       <div class="desc">
