added home link

--- a/thoughts.htm
+++ b/thoughts.htm
@@ -138,6 +138,9 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     <p>We have had a few interesting experiences when we handled different GPU generations. Its quite amazing and risky that if we do program 3D without considering those aspects. However it varies from case to case. Check back for more details...</p>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-12 heading" align="center"><a href="index.htm"> <img src="images/logo.png" alt="Home" style="width:94px;height:94px;border:0;"> </a> <span class="headspace">Thoughts</span></div>
+    </div>
   </div>
 </section>
 <!---end profile---> 
