changed products to LidarLion

--- a/index.htm
+++ b/index.htm
@@ -165,7 +165,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menusep"></div>
             </a></li>
           <li><a href="lidarlion.html">
-            <div class="menulink"> Products</div>
+            <div class="menulink"> LidarLion</div>
             <div class="menusep"></div>
             </a></li>
           <li><a  href="#Profile">
