corrected text errors

--- a/index.htm
+++ b/index.htm
@@ -262,7 +262,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
         </div>
         <div class="row">
           <div class="desc wow fadeInLeft">
-            <p>3D programming make sense! When it deals with huge data, it’s terribly interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.</p>
+            <p>3D programming make sense! When it deals with huge data, it’s profoundly interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.</p>
             <p>We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.</p>
             <p>From Da-Vinci days itself, architecting plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art.</p>
             <p>We do business because of passion in 3D graphics. See business link…</p>
@@ -333,10 +333,10 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
        <p><b> We welcome all challenge loving programmers.</b></p>
 
 <ul><li> Passion for 3D is our first criteria.</li>
-<li>Then a sense in 3D. With a white board or piece of paper, it is hard to communicate 3D. We can only indicate by drawing. Difficult.. Right?</li>
+<li>Then a sense in 3D. With a white board or piece of paper, it is hard to communicate 3D. We can only indicate by drawing. Difficult! Right?</li>
 <li> You may be good in JS or openGL ES. We agree that you are an expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge of system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programming knowledge!</li>
 <li>Be connected. We want you to learn seamlessly. Be abreast in technology.</li>
-<li> Travel friendly…? Good.. not just flying and speaking; we want you to know and respect global cultures. </li> 
+<li> Travel friendly? Good! not just flying and speaking; we want you to know and respect global cultures. </li> 
 
 <p>Finally the most important one: Trust…! We trust you and you can trust us. That is our commitment. If you are ready for that professional life based on mutual trust, you are welcome to join us.</p>
 
