removed bulletted list

--- a/index.htm
+++ b/index.htm
@@ -332,11 +332,11 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
         <div class="row desc">
        <p><b> We welcome all challenge loving programmers.</b></p>
 
-<ul><li> Passion for 3D is our first criteria.</li>
-<li>Then a sense in 3D. With a white board or piece of paper, it is hard to communicate 3D. We can only indicate by drawing. Difficult! Right?</li>
-<li> You may be good in JS or openGL ES. We agree that you are an expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge of system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programming knowledge!</li>
-<li>Be connected. We want you to learn seamlessly. Be abreast in technology.</li>
-<li> Travel friendly? Good! not just flying and speaking; we want you to know and respect global cultures. </li> </ul>
+<p> Passion for 3D is our first criteria.</p>
+<p>Then a sense in 3D. With a white board or piece of paper, it is hard to communicate 3D. We can only indicate by drawing. Difficult! Right?</p>
+<p> You may be good in JS or openGL ES. We agree that you are an expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge of system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programming knowledge!</p>
+<p>Be connected. We want you to learn seamlessly. Be abreast in technology.</p>
+<p> Travel friendly? Good! not just flying and speaking; we want you to know and respect global cultures. </p>
 
 <p>Finally the most important one: Trust…! We trust you and you can trust us. That is our commitment. If you are ready for that professional life based on mutual trust, you are welcome to join us.</p>
 
