--- a/lidarlion.html
+++ b/lidarlion.html
@@ -58,8 +58,11 @@
       data generation from known geometries. It does not originally accomodate point-clouds. LidarLion is designed by keeping
       point-cloud as the heart. Vast and dense point clouds made by Lidar is not friendly for a typical graphics hardware
       where their market pull is coming from gaming market. In games, scenes are modeled synthetically with continuous surfaces.
-      So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work.
+      So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work. 
     </p>
+      <p>
+      <a href="brochure/lidarlion-ebrochure.pdf"> <b> <font size="+2">Click here for the e-brochure...</font></b></a> 
+      </p>
     <p>
       LidarLion is not released yet. It is under development. 
     </p>
@@ -68,7 +71,7 @@
         When is the launch?
       </p>
       <p> Development is in progress with 1074 Vectors. We welcome queries, because an early query may
-        influence a feature in this new product. Any change for good is great! Version 1.0 will be released in June 2017. Interested
+        influence a feature in this new product. Any change for good is great! Version 1.0 will be released in October 2017. Interested
         parties may get a 'beta' version even before that.
       </p>
     </div>
