--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@ include_once("includes/encryption.htm");
 <html lang="en">
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>1074 Vectors</title>
+    <title>Ten Seven Four Vectors</title>
     <meta name="keywords" content="3D, programming,1074,vectors,picture,graphics,dimensions,engineering,Architecting,companies,software,homes ,RGB pixels,photograph,360 degrees,LIDAR,devices,SWOT ,mathematics,imaging,bytes,Stereoscopic ,memorized,data, x,y,z,DICOM ,Microsoft ,programmer ," />
     <meta name="description" content="3D programming make sense! When it deals with huge data, it’s interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.
 
@@ -34,7 +34,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     <meta itemprop="description" content="3D programming make sense! When it deals with huge data, it’s interesting too. You have reached 1074 Vectors, the home of interactive 3D graphics experts.
 
 We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy." />
-    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -262,7 +262,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
         </div>
         <div class="row">
           <div class="desc wow fadeInLeft">
-            <p>3D programming make sense! When it deals with huge data, it’s profoundly interesting too. 1074 Vectors, the interactive 3D graphics expertize, homes here.</p>
+            <p>3D programming make sense! When it deals with huge data, it’s profoundly interesting too. 1074 Vectors <sub>(Ten Seven Four Vectors) </Sub>, the interactive 3D graphics expertize, homes here.</p>
             <p>We love the evolution of interactive 3D graphics. 3D programming always had a glorious fancy part and an engineering part. It’s been challenging to keep performance with required accuracy. How we balance the usage of memory to reduce repeated computing? When it mixes with distributed nature and capacity of the new generation head-end devices, it can be again challenging. Engineering always serves the purpose well, any artistic rendering will be neglected. But without a good combination of colors and effects a good software will not please users.</p>
             <p>From Da-Vinci days itself, architecting plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art.</p>
             <p>We do business because of passion in 3D graphics. See business link…</p>
