launch information updated for lidarlion

--- a/lidarlion.html
+++ b/lidarlion.html
@@ -61,17 +61,8 @@
       So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work.
     </p>
     <p>
-      LidarLion is not released yet. It is under development. 
+        Want to try out? Contact yourBuddy@1074vectors.com for a fully functional trial version.
     </p>
-    <div style="margin:20px;">
-      <p class="subhead">
-        When is the launch?
-      </p>
-      <p> Development is in progress with 1074 Vectors. We welcome queries, because an early query may
-        influence a feature in this new product. Any change for good is great! Version 1.0 will be released in June 2017. Interested
-        parties may get a 'beta' version even before that.
-      </p>
-    </div>
   </div>
   <br><br><br>
   <p style="font-size:75%;"> Image coutesy:vterrain.org</p>
