--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<?php
+﻿<?php
 include_once("includes/gzip.htm");
 include_once("includes/settings.htm");
 include_once("includes/encryption.htm");
@@ -165,7 +165,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menusep"></div>
             </a></li>
           <li><a href="lidarlion.html">
-            <div class="menulink"> LidarLion</div>
+            <div class="menulink"> lidar.lionn</div>
             <div class="menusep"></div>
             </a></li>
           <li><a  href="#Profile">
