added link to lidar.lionn webpage
also, change LidarLion into lidar.lionn

--- a/lidarlion.html
+++ b/lidarlion.html
@@ -20,7 +20,7 @@
 
   </section>
 
-  <div class="col-sm-12 heading" align="center">  <a href="index.htm"> <img src="images/logo.png" alt="Home" style="width:94px;height:94px;border:0;"> </a> <span class="headspace">LidarLion</span></div>
+  <div class="col-sm-12 heading" align="center">  <a href="index.htm"> <img src="images/logo.png" alt="Home" style="width:94px;height:94px;border:0;"> </a> <span class="headspace">lidar.lionn</span></div>
   <div align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_8xDLYAelNo" frameborder="0" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/DsHr7guRKC4" frameborder="0" allowfullscreen></iframe>
@@ -29,7 +29,7 @@
   <br>
   <div align="justify">
     <p>
-      Viewing Lidar data has never been this simple. LidarLion, a software ecosystem, is meant for those who do <strong>corridor mapping</strong> using lidar data.
+      Viewing Lidar data has never been this simple. <i>lidar.lionn</i>, a software ecosystem, is meant for those who do <strong>corridor mapping</strong> using lidar data.
     </p>
     <p>
       <strong>Survey</strong> is not an invention of digital era. It is indended to measure and keep facts. 
@@ -42,7 +42,7 @@
       software for this purpose is lacking in the scene.
     </p>
     <p>
-      LidarLion is a software focussing on the full workflow of lidar data from capturing at site to GIS data publication as reports. 
+      <i>lidar.lionn</i> is a software focussing on the full workflow of lidar data from capturing at site to GIS data publication as reports. 
       A typical survey company collects data for each project in multiple schedules. 
       There could be different types of Lidar data (like mobile or arial). 
       Whole data has to be properly tagged with a unique project code. 
@@ -53,9 +53,9 @@
       For an initial planning, some might be so fond of satelite imagery. Another aspect is the skillset of users in corridor mapping.
       Some users might be so good in macro searching of assets. 
       Some of them might be experts in in-detail measurements for each individual assets. 
-      Lidarlion address a hightly collaborative working strategy. It supports full workflow. Tasks are listed for tracking:No more e-mail based
+      <i>lidar.lionn</i> address a hightly collaborative working strategy. It supports full workflow. Tasks are listed for tracking:No more e-mail based
       work-management. It's 3D is pure. No need to share anything with a CAD softwares, which are desgined primarily for synthetic
-      data generation from known geometries. It does not originally accomodate point-clouds. LidarLion is designed by keeping
+      data generation from known geometries. It does not originally accomodate point-clouds. <i>lidar.lionn</i> is designed by keeping
       point-cloud as the heart. Vast and dense point clouds made by Lidar is not friendly for a typical graphics hardware
       where their market pull is coming from gaming market. In games, scenes are modeled synthetically with continuous surfaces.
       So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work. 
@@ -67,6 +67,7 @@
         Want to try out? Contact yourBuddy@1074vectors.com for a fully functional trial version.
     </p>
   </div>
+  <p style="text-align: center; font-size: 1.7em; font-weight: bold"><a href="http://lidarlionn.com/">Visit lidar.lionn</a></p>
   <br><br><br>
   <p style="font-size:75%;"> Image coutesy:vterrain.org</p>
   <p>-- <strong>eof</strong> --</p>
