--- a/index.htm
+++ b/index.htm
@@ -164,7 +164,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menulink"> 3D</div>
             <div class="menusep"></div>
             </a></li>
-          <li><a href="lidarlion.html">
+          <li><a href="lidar.lionn.html">
             <div class="menulink"> lidar.lionn</div>
             <div class="menusep"></div>
             </a></li>
