integrated lidar.lionn product site and phone

--- a/lidar.lionn.html
+++ b/lidar.lionn.html
@@ -64,10 +64,10 @@
       <a href="brochure/lidarlion-ebrochure.pdf"> <b> <font size="+2">Click here for the e-brochure...</font></b></a> 
       </p>
     <p>
-        Want to try out? Contact yourBuddy@1074vectors.com for a fully functional trial version.
+        Want to try out? Contact lidarlionn@1074vectors.com for a fully functional version.
     </p>
   </div>
-  <p style="text-align: center; font-size: 1.7em; font-weight: bold"><a href="http://lidarlionn.com/">Visit lidar.lionn</a></p>
+  <p style="text-align: center; font-size: 1.7em; font-weight: bold"><a href="lidar.lionn/index.html">Visit product site : lidar.lionn</a></p>
   <br><br><br>
   <p style="font-size:75%;"> Image coutesy:vterrain.org</p>
   <p>-- <strong>eof</strong> --</p>
